# OpenVend

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEPENDENCY_POLICY.md  LICENSE.md  NOTICE.md  README.md  THIRD_PARTY_NOTICES.md  docker-compose.tls.yml  docker-compose.yml  openvend-prd.md  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_slice.md
.github/workflows/: ci.yml  license-scan.yml
apps/web/: Dockerfile  eslint.config.js  index.html  package.json  tailwind.config.ts
apps/web/src/: App.test.tsx  App.tsx  styles.css
docs/adr/: 0001-phase-0-stack.md
docs/api-parity/: contacts.md
docs/dev/: ai-assisted-workflow.md
docs/legal/: license-model.md
docs/qa/: phase-0-web-shell.md
infra/kratos/: kratos.yml
infra/postgres/: init-databases.sh
infra/traefik/: dynamic.tls.yml  dynamic.yml
openapi/: authorization-adapter.json  contacts.json
scripts/: check_dependency_policy.mjs  check_node_licenses.mjs  check_python_licenses.py  check_runtime_config.sh  export_openapi.py  export_openapi.sh  init.sh
services/authorization-adapter/: Dockerfile  pyproject.toml
services/authorization-adapter/app/: __init__.py  main.py
services/authorization-adapter/tests/: test_app.py
services/contacts/: Dockerfile  alembic.ini  pyproject.toml
services/contacts/alembic/: env.py
services/contacts/alembic/versions/: 0001_contacts_foundation.py
services/contacts/app/: __init__.py  auth.py  database.py  main.py  models.py  schemas.py
services/contacts/tests/: test_contacts_app.py
(+3 files in other folders)
