[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openvend-contacts-service"
version = "0.1.0"
description = "OpenVend ERP contacts service"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2",
  "fastapi>=0.115,<1",
  "pg8000>=1.31,<2",
  "pydantic>=2.8,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10",
  "ruff>=0.6,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
